# aws-strava-stats

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
cdk/: stack.py
lambda/: main.py  strava.py
